--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,4 +1,5 @@
-font_family Fira Code SemiBold
+#font_family Fira Code SemiBold
+font_family "CaskaydiaCove Nerd Font Mono"
 font_size 16.0
 bold_font auto
 italic_font auto
