[fix] arch init script and hypr config

--- a/hypr/.config/hypr/UserConfigs/UserSettings.conf
+++ b/hypr/.config/hypr/UserConfigs/UserSettings.conf
@@ -21,9 +21,9 @@ master {
 }
 
 general {
-  sensitivity = 1.00
+  #sensitivity = 1.00
   border_size = 2
-  apply_sens_to_raw = 1
+  #apply_sens_to_raw = 1
   gaps_in = 6
   gaps_out = 8
 
@@ -90,6 +90,7 @@ input {
   repeat_rate = 50
   repeat_delay = 300
   numlock_by_default = true
+  sensitivity = 0 #mouse sensivity
   left_handed = false
   follow_mouse = true
   float_switch_override_focus = false
