--- a/hypr/.config/hypr/UserConfigs/WindowRules.conf
+++ b/hypr/.config/hypr/UserConfigs/WindowRules.conf
@@ -15,6 +15,7 @@ windowrule = center,^([Ff]erdium)$
 # windowrulev2 = center,floating:1 # warning, it cause even the menu to float and center.
 windowrulev2 = center, class:([Tt]hunar), title:(File Operation Progress)
 windowrulev2 = center, class:([Tt]hunar), title:(Confirm to replace files)
+windowrulev2 = center, title:^(ROG Control)$ 
 windowrulev2 = move 72% 7%,title:^(Picture-in-Picture)$ 
 #windowrulev2 = move 72% 7%,title:^(Firefox)$ 
 
@@ -66,6 +67,7 @@ windowrulev2 = float, class:^([Qq]alculate-gtk)$
 windowrulev2 = float, class:^([Ww]hatsapp-for-linux)$
 windowrulev2 = float, class:^([Ff]erdium)$
 windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrulev2 = float, title:^(ROG Control)$
 #windowrulev2 = float, title:^(Firefox)$
 
 # windowrule v2 - opacity #enable as desired
@@ -80,7 +82,7 @@ windowrulev2 = opacity 0.9 0.8, class:^([Tt]hunar|org.gnome.Nautilus)$
 windowrulev2 = opacity 0.8 0.6, class:^(pcmanfm-qt)$
 windowrulev2 = opacity 0.8 0.7, class:^(gedit|org.gnome.TextEditor|mousepad)$
 windowrulev2 = opacity 0.9 0.8, class:^(deluge)$
-windowrulev2 = opacity 0.9 0.8, class:^(Alacritty|kitty)$ # Terminals
+windowrulev2 = opacity 0.8 0.7, class:^(Alacritty|kitty|kitty-dropterm)$ # Terminals
 windowrulev2 = opacity 0.9 0.7, class:^(VSCodium|codium-url-handler)$
 windowrulev2 = opacity 0.9 0.8, class:^(nwg-look|qt5ct|qt6ct|yad)$
 windowrulev2 = opacity 0.9 0.8, title:(Kvantum Manager)
@@ -110,7 +112,8 @@ windowrulev2 = size 70% 70%, class:^(evince|wihotspot(-gui)?)$
 windowrulev2 = size 60% 70%, class:^(file-roller|org.gnome.FileRoller)$
 windowrulev2 = size 60% 70%, class:^([Ww]hatsapp-for-linux)$
 windowrulev2 = size 60% 70%, class:^([Ff]erdium)$
-windowrulev2 = size 25% 25%, title:^(Picture-in-Picture)$ 
+windowrulev2 = size 25% 25%, title:^(Picture-in-Picture)$
+windowrulev2 = size 60% 70%, title:^(ROG Control)$  
 #windowrulev2 = size 25% 25%, title:^(Firefox)$ 
 
 # windowrule v2 - pinning
