--- a/hypr/.config/hypr/configs/Keybinds.conf
+++ b/hypr/.config/hypr/configs/Keybinds.conf
@@ -36,6 +36,7 @@ bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music
 bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
 bind = $mainMod SHIFT, W, exec, $UserScripts/WallpaperEffects.sh # Wallpaper Effects by imagemagickWW
 bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
+bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opacity to active window
 
 # Waybar / Bar related
 bind = $mainMod, B, exec, pkill -SIGUSR1 waybar # Toggle hide/show waybar 
