--- a/hypr/.config/hypr/hyprlock-1080p.conf
+++ b/hypr/.config/hypr/hyprlock-1080p.conf
@@ -12,8 +12,11 @@ general {
 
 background {
     monitor =
+    # NOTE: use only 1 path
 	#path = screenshot   # screenshot of your desktop
 	path = $HOME/.config/hypr/wallpaper_effects/.wallpaper_modified   # NOTE only png supported for now
+    #path = $HOME/.config/hypr/wallpaper_effects/.wallpaper_current # current wallpaper
+    
     #color = $color7
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
