--- a/hypr/.config/hypr/UserConfigs/Laptops.conf
+++ b/hypr/.config/hypr/UserConfigs/Laptops.conf
@@ -4,8 +4,8 @@
 # These configs are mostly for laptops. This is addemdum to Keybinds.conf
 
 $mainMod = SUPER
-$scriptsDir = $HOME/.config/hypr/scripts
-$UserConfigs = $HOME/.config/hypr/UserConfigs
+$scriptsDir = $CURRENT_CONFIG_DIR/hypr/scripts
+$UserConfigs = $CURRENT_CONFIG_DIR/hypr/UserConfigs
 
 # for disabling Touchpad. hyprctl devices to get device name. 
 $Touchpad_Device=asue1209:00-04f3:319f-touchpad
@@ -51,5 +51,5 @@ device {
 #bindl = , switch:on:Lid Switch,exec,echo "monitor = eDP-1, disable" > $UserConfigs/LaptopDisplay.conf
 
 # for laptop-lid action (to erase the last entry)
-#exec-once = echo "eDP-1, preferred, auto, 1" > $HOME/.config/hypr/UserConfigs/LaptopDisplay.conf
+#exec-once = echo "eDP-1, preferred, auto, 1" > $CURRENT_CONFIG_DIR/hypr/UserConfigs/LaptopDisplay.conf
 #
