--- a/hypr/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/hypr/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -1,8 +1,8 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 #Commands & Apps to be executed at launch
 
-$scriptsDir = $HOME/.config/hypr/scripts
-$UserScripts = $HOME/.config/hypr/UserScripts
+$scriptsDir = $CURRENT_CONFIG_DIR/hypr/scripts
+$UserScripts = $CURRENT_CONFIG_DIR/hypr/UserScripts
 
 $wallDIR=$HOME/Pictures/wallpapers
 $lock = $scriptsDir/LockScreen.sh
