--- a/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -8,8 +8,8 @@
 $mainMod = SUPER
 $files = thunar
 $term = kitty
-$scriptsDir = $HOME/.config/hypr/scripts
-$UserScripts = $HOME/.config/hypr/UserScripts
+$scriptsDir = $CURRENT_CONFIG_DIR/hypr/scripts
+$UserScripts = $CURRENT_CONFIG_DIR/hypr/UserScripts
 
 # rofi App launcher
 #bindr = $mainMod, $mainMod_L, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window # Super Key to Launch rofi menu
