--- a/hypr/.config/hypr/configs/Keybinds.conf
+++ b/hypr/.config/hypr/configs/Keybinds.conf
@@ -4,11 +4,11 @@
 
 $mainMod = SUPER
 # Default
-$scriptsDir = $HOME/.config/hypr/scripts
-$configs = $HOME/.config/hypr/configs
+$scriptsDir = $CURRENT_CONFIG_DIR/hypr/scripts
+$configs = $CURRENT_CONFIG_DIR/hypr/configs
 # User
-$UserConfigs = $HOME/.config/hypr/UserConfigs
-$UserScripts = $HOME/.config/hypr/UserScripts
+$UserConfigs = $CURRENT_CONFIG_DIR/hypr/UserConfigs
+$UserScripts = $CURRENT_CONFIG_DIR/hypr/UserScripts
 
 bind = CTRL ALT, Delete, exec, hyprctl dispatch exit 0
 bind = $mainMod, Q, killactive,
