--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,13 +1,13 @@
 # Sourcing external config files
 
 # Default Configs
-$configs = $HOME/.config/hypr/configs
+$configs = $CURRENT_CONFIG_DIR/hypr/configs
 
 source=$configs/Settings.conf
 source=$configs/Keybinds.conf
 
 # User Configs
-$UserConfigs = $HOME/.config/hypr/UserConfigs
+$UserConfigs = $CURRENT_CONFIG_DIR/hypr/UserConfigs
 
 source= $UserConfigs/Startup_Apps.conf
 source= $UserConfigs/ENVariables.conf
