--- a/hypr/.config/hypr/configs/Settings.conf
+++ b/hypr/.config/hypr/configs/Settings.conf
@@ -5,4 +5,4 @@
 # refer to Hyprland wiki for more info https://wiki.hyprland.org/Configuring/Variables
 
 # Initial boot script enable to apply initial wallpapers, theming, new settings etc.
-exec-once = $HOME/.config/hypr/initial-boot.sh
+exec-once = $CURRENT_CONFIG_DIR/hypr/initial-boot.sh
