--- a/oh-my-posh/.config/oh-my-posh/gbs.omp.yaml
+++ b/oh-my-posh/.config/oh-my-posh/gbs.omp.yaml
@@ -1,10 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
-final_space: true
+version: 3
 shell_integration: true
-version: 2
-
-var:
-  WinOS: windows
+final_space: true
 
 palette:
   bg: "#4d4d4d"
@@ -21,138 +18,110 @@ palette:
   white: "#FFFFFF"
   yellow: "#FFFB38"
 
-blocks:
+var:
+  WinOS: windows
 
-  # Prompt info bar
+blocks:
   - type: prompt
     alignment: left
     segments:
-
       - type: session
         style: plain
+        properties:
+          cache_duration: none
+        template: "{{if and (ne .OS .Var.WinOS) (not .WSL)}} {{.HostName}}:{{.UserName}} <p:dfg>\ue0b1</>{{else if .WSL}} WSL:{{.UserName}} <p:dfg>\ue0b1</>{{else if .Root}} \uf0ad <p:dfg>\ue0b1</>{{end}}"
+        background: p:bg
         foreground_templates:
           - "{{if .Root}}p:red{{else}}p:dfg{{end}}"
-        background: p:bg
-        template: "{{if and (ne .OS .Var.WinOS) (not .WSL)}} {{.HostName}}:{{.UserName}} <p:dfg>\ue0b1</>{{else if .WSL}} WSL:{{.UserName}} <p:dfg>\ue0b1</>{{else if .Root}} \uf0ad <p:dfg>\ue0b1</>{{end}}"
-
       - type: path
         style: plain
-        foreground: p:fg
-        background: p:bg
-        template: " {{ .Path }} "
         properties:
+          cache_duration: none
           folder_icon: 
           folder_separator_icon: <p:dfg></>
           home_icon: "~"
           max_depth: 3.0
           style: agnoster_short
-
+        template: " {{ .Path }} "
+        foreground: p:fg
+        background: p:bg
       - type: git
         style: plain
+        properties:
+          branch_max_length: 0.0
+          cache_duration: none
+          fetch_stash_count: true
+          fetch_status: true
+          fetch_upstream_icon: true
+        template: "<p:dfg>\ue0b1 </>{{.UpstreamIcon}}{{.HEAD}}{{.BranchStatus}}{{if .Working.Changed}} \uf044 {{.Working.String}}{{end}}{{ if and (.Working.Changed) (.Staging.Changed) }} |{{end}}{{ if .Staging.Changed }} \uf046 {{ .Staging.String }}{{end}}{{ if gt .StashCount 0 }} \uf692 {{ .StashCount }}{{end}} "
         foreground: p:green
+        background: p:bg
         foreground_templates:
           - "{{if or (.Working.Changed) (.Staging.Changed)}}p:orange{{end}}"
           - "{{if and (gt .Ahead 0) (gt .Behind 0)}}p:orange{{end}}"
           - "{{if gt .Ahead 0}}p:yellow{{end}}"
           - "{{if gt .Behind 0}}p:red{{end}}"
-        background: p:bg
-        template: "<p:dfg>\ue0b1 </>{{.UpstreamIcon}}{{.HEAD}}{{.BranchStatus}}{{if .Working.Changed}} \uf044 {{.Working.String}}{{end}}{{ if and (.Working.Changed) (.Staging.Changed) }} |{{end}}{{ if .Staging.Changed }} \uf046 {{ .Staging.String }}{{end}}{{ if gt .StashCount 0 }} \uf692 {{ .StashCount }}{{end}} "
-        properties:
-          branch_max_length: 0.0
-          fetch_stash_count: true
-          fetch_status: true
-          fetch_upstream_icon: true
-
       - type: dotnet
         style: plain
+        properties:
+          cache_duration: none
+          home_enabled: false
+        template: "<p:dfg>\ue0b1 </>\ue77f {{if .Unsupported}}\uf071{{else}}{{.Full}}{{end}} "
         foreground: p:blue
         background: p:bg
-        template: "<p:dfg>\ue0b1 </>\ue77f {{if .Unsupported}}\uf071{{else}}{{.Full}}{{end}} "
-        properties:
-          home_enabled: false
-
       - type: node
         style: plain
+        properties:
+          cache_duration: none
+          fetch_version: true
+        template: "<p:dfg>\ue0b1 </>\uf898 {{if .PackageManagerIcon}}{{.PackageManagerIcon}} {{end}}{{.Full}} "
         foreground: p:dfg
         background: p:bg
-        template: "<p:dfg>\ue0b1 </>\uf898 {{if .PackageManagerIcon}}{{.PackageManagerIcon}} {{end}}{{.Full}} "
-        properties:
-          fetch_version: true
-
       - type: angular
         style: plain
+        properties:
+          cache_duration: none
+        template: "<p:dfg>\ue0b1 </>\ue753 {{if .Error}}{{.Error}}{{else}}{{.Full}}{{end}} "
         foreground: p:yellow
         background: p:bg
-        template: "<p:dfg>\ue0b1 </>\ue753 {{if .Error}}{{.Error}}{{else}}{{.Full}}{{end}} "
-        
       - type: nx
         style: plain
+        properties:
+          cache_duration: none
+        template: "<p:dfg>\ue0b1 </>nx {{if .Error}}{{.Error}}{{else}}{{.Full}}{{end}} "
         foreground: p:pink
         background: p:bg
-        template: "<p:dfg>\ue0b1 </>nx {{if .Error}}{{.Error}}{{else}}{{.Full}}{{end}} "
-
       - type: python
         style: plain
+        properties:
+          cache_duration: none
+          display_mode: files
+          fetch_virtual_env: true
+        template: "<p:dfg>\ue0b1 </>\ue235 {{if .Error}}{{.Error}}{{else}}{{if .Venv}}{{.Venv}}{{end}}{{.Full}}{{end}} "
         foreground: p:orange
         background: p:bg
-        template: "<p:dfg>\ue0b1 </>\ue235 {{if .Error}}{{.Error}}{{else}}{{if .Venv}}{{.Venv}}{{end}}{{.Full}}{{end}} "
-        properties:
-          display_mode: files
-          fetch_virtual_env: true
-      
       - type: go
         style: plain
+        properties:
+          cache_duration: none
+        template: "<p:dfg>\ue0b1 </>ﳑ {{if .Error}}{{.Error}}{{else}}{{.Full}}{{end}} "
         foreground: p:blue
         background: p:bg
-        template: "<p:dfg>\ue0b1 </>ﳑ {{if .Error}}{{.Error}}{{else}}{{.Full}}{{end}} "
-      
       - type: rust
         style: plain
-        foreground: "#99908A"
-        background: p:bg
-        template: "<p:dfg>\ue0b1 </>\ue7a8 {{if .Error}}{{.Error}}{{else}}{{.Full}}{{end}} "
         properties:
+          cache_duration: none
           display_mode: files
           fetch_virtual_env: true
-      
-      # - type: docker
-      #   style: plain
-      #   foreground: p:teal
-      #   background: p:bg
-      #   template: "<p:dfg>\ue0b1 </>\uf308 {{.Context}} "
-      
-      # - type: terraform
-      #   style: plain
-      #   foreground: p:teal
-      #   background: p:bg
-      #   template: "<p:dfg>\ue0b1 </>tf: {{.WorkspaceName}}{{if .Version}} {{.Version}}{{end}} "
-      #   properties:
-      #     fetch_version: true
-      
-      # - type: aws
-      #   style: plain
-      #   foreground: p:yellow
-      #   foreground_templates:
-      #     - "{{if contains \"default\" .Profile}}p:white{{end}}"
-      #   background: p:bg
-      #   template: "<p:dfg>\ue0b1 </>\ue7ad {{.Profile}}{{if .Region}}@{{.Region}}{{end}} "
-      #   properties:
-      #     display_default: false
-      
-      # - type: az
-      #   style: plain
-      #   foreground: p:lavender
-      #   background: p:bg
-      #   template: "<p:dfg>\ue0b1 </>ﴃ {{.EnvironmentName}} "
-      
+        template: "<p:dfg>\ue0b1 </>\ue7a8 {{if .Error}}{{.Error}}{{else}}{{.Full}}{{end}} "
+        foreground: "#99908A"
+        background: p:bg
       - type: os
         style: plain
-        foreground: p:dfg
-        background: p:bg
-        template: "<p:dfg>\ue0b1 </>{{.Icon}} "
         properties:
           alpine: 
           arch: 
+          cache_duration: none
           centos: 
           debian: 
           elementary: 
@@ -167,40 +136,37 @@ blocks:
           ubuntu: 
           windows: 
           wsl: 
-      
+        template: "<p:dfg>\ue0b1 </>{{.Icon}} "
+        foreground: p:dfg
+        background: p:bg
       - type: shell
         style: plain
-        foreground_templates:
-          - "{{if gt .Code 0}}p:red{{else}}p:green{{end}}"
-        background: p:bg
-        template: "<p:dfg>\ue0b1 {{.Name}} </>\ue23a "
         properties:
           always_enabled: true
+          cache_duration: none
           mapped_shell_names:
             pwsh: PS
-      
+        template: "<p:dfg>\ue0b1 {{.Name}} </>\ue23a "
+        background: p:bg
+        foreground_templates:
+          - "{{if gt .Code 0}}p:red{{else}}p:green{{end}}"
       - type: executiontime
         style: diamond
-        foreground: p:fg
-        background: p:bg
+        properties:
+          always_enabled: true
+          cache_duration: none
+          style: austin
         trailing_diamond: 
         template: "{{.FormattedMs}} "
-        properties:
-          style: austin
-          always_enabled: true
-
-  # Prompt imput line
+        foreground: p:fg
+        background: p:bg
   - type: prompt
     alignment: left
-    newline: true
     segments:
-
       - type: text
         style: plain
-        foreground: p:white
+        properties:
+          cache_duration: none
         template: ">"
-
-# transient_prompt:
-#   background: transparent
-#   foreground: "#ffffff"
-#   template: "{{ .Shell }}> "
+        foreground: p:white
+    newline: true
