[feat:os] pop os support added

--- a/oh-my-posh/.config/oh-my-posh/gbs.omp.yaml
+++ b/oh-my-posh/.config/oh-my-posh/gbs.omp.yaml
@@ -132,6 +132,7 @@ blocks:
           manjaro: 
           mint: 
           opensuse: 
+          pop: \uF32A
           raspbian: 
           ubuntu: 
           windows: 
