--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,6 +1,6 @@
 # This is Git's per-user configuration file.
 [include]
-    path = ~/.config/git/user.config
+    path = ~/.config/git.user/config
 
 [http]
 	sslVerify = true
