[fix:ms] dotnet and powershell install fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+# Generic
 *.log
+# tmux
 tmux/.config/tmux/plugins/*
 tmux/.config/tmux/tmux.conf.local
 nvim/.config/nvim/lazy-lock.json
+# homebrew symlinks
+fd
+bat
+# Test files
 test.sh
