--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -7,14 +7,14 @@
 // custom settings, run `zed: open default settings` from the
 // command palette
 {
+  "icon_theme": "Zed (Default)",
   "base_keymap": "VSCode",
-  "buffer_font_family": "CaskaydiaCove Nerd Font Mono",
   "ui_font_size": 16,
   "buffer_font_size": 16,
   "theme": {
-    "mode": "system",
+    "mode": "dark",
     "light": "One Light",
-    "dark": "Catppuccin Mocha"
+    "dark": "One Dark"
   },
   "tab_size": 2
 }
