[feat:oh-my-posh] current time segment added in default config

--- a/oh-my-posh/.config/oh-my-posh/gbs-text.omp.yaml
+++ b/oh-my-posh/.config/oh-my-posh/gbs-text.omp.yaml
@@ -119,7 +119,7 @@ blocks:
       
       - type: os
         style: plain
-        foreground: p:dfg
+        foreground: p:wfg
         background: p:bg
         template: "<p:dfg>> </>{{.Icon}} "
         properties:
