--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -1,8 +1,8 @@
 {
   "$schema": "https://opencode.ai/config.json",
   "theme": "opencode",
-  "model": "anthropic/claude-sonnet-4-5",
-  "small_model": "anthropic/claude-haiku-4-5",
+  "model": "opencode/kimi-k2.5-free",
+  "small_model": "opencode/glm-4.7-free",
   "autoupdate": true,
   "mcp": {
     "playwright": {
